--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>League of Legends • Jhin</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div *ngIf="jhin" class="container">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <img [src]="splashUrl" alt="Jhin" class="splash">
+
+    <h1>{{ jhin.name }}</h1>
+    <h2>{{ jhin.title }}</h2>
+
+    <p class="lore">
+      {{ jhin.lore }}
+    </p>
+
+    <ion-button expand="block" color="warning" (click)="verHabilidades()">
+      Ver Habilidades
+    </ion-button>
+
   </div>
 </ion-content>
